route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    type: go-web-app-instance
  name: label-shard-route
  namespace: test
  nginx.ingress.kubernetes.io/canary-by-header-value: "go-web-app"
spec:
  subdomain: test
  tls:
    termination: edge
  to:
    kind: Service
    name: go-web-app1-service-instance1
    weight: 50
  alternateBackends:
    - kind: Service
      name: go-web-app2-service-instance2
      weight: 50
